--- a/ManageLoansFrontend/Dockerfile
+++ b/ManageLoansFrontend/Dockerfile
@@ -1,8 +1,7 @@
 FROM nginx:stable-alpine
 
 COPY dist /usr/share/nginx/html
-COPY /nginx/conf.d /etc/nginx/conf.d
 
-EXPOSE 3000
+COPY frontend.conf /etc/nginx/conf.d/frontend.conf
 
 CMD ["nginx", "-g", "daemon off;"]
