--- a/ManageLoansFrontend/package.json
+++ b/ManageLoansFrontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.5",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
